# mlpc2026_domestic_sed

./: .gitignore  README.md  pyproject.toml
resources/: validation_fake_predictions.csv
src/domestic_sed/: __init__.py  augmentations.py  training.py
src/domestic_sed/architectures/: CRNN.py  __init__.py
src/domestic_sed/dataset/: __init__.py  mlpc2026.py
src/domestic_sed/metrics/: __init__.py  segment_based_metrics.py
sweeps/: architecture_depth_8.yaml  architecture_depth_8_x1.yaml  architecture_depth_8_x2.yaml  sweep_1_architecture_depth_8_x2.yaml  sweep_2_architecture_depth_8_x2.yaml  sweep_3_architecture_depth_8_x2.yaml  sweep_4_architecture_depth_8_x2.yaml
tests/: test_crnn.py  test_mlpc2026_dataset.py  test_training.py
visualizations/: _spectrogram_convolution_common.py  bce_loss.py  create_relu_activation_figure.py  create_resnet_prenorm_block_figure.py  create_sed_slide_figure.py  create_spectrogram_convolution_kernel_figure.py  create_spectrogram_convolution_result_figure.py  create_waveform_logmel_figure.py  generate_optimizer_paths.py  lr_schedule.py
