[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "somestic-SED"
version = "0.1.0"
description = "Minimal experiment pipeline for sound event classification with PyTorch Lightning."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "torch>=2.4",
  "torchaudio>=2.4",
  "lightning>=2.2,<3.0",
  "wandb>=0.17",
  "PyYAML>=6.0",
  "pandas>=2.2",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  "torchmetrics>=1.4",
  "matplotlib>=3.9",
  "librosa>=0.10",
]

[project.scripts]
domestic-sed-eval = "domestic_sed.evaluation:main"
domestic-sed-train = "domestic_sed.training:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
